# myicc

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  myicc_config.txt
src/: color_controller.cpp  color_controller.h  color_enhance.cpp  color_enhance.h  console_main.cpp  diagnostic.cpp  gamma.cpp  gamma.h  gpu_info.cpp  main.cpp  make_icon.cpp  myicc.rc  nvapi_wrapper.cpp  nvapi_wrapper.h  test_launch.cpp  wcs_control.h
